--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -30,4 +30,15 @@
         android:text="TextView"
         android:textSize="16sp"
         android:textColor="#fff"/>
+
+    <Button
+
+        android:text="选择"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+      android:layout_marginLeft="10dp"
+        
+        android:id="@+id/nav_button" />
 </RelativeLayout>
