--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -10,11 +10,14 @@
         android:background="?attr/colorPrimary">
 
         <Button
-            android:padding="5dp"
-            android:text="返回"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bt_back" />
+            android:padding="10dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/bt_back"
+            android:background="@drawable/back"
+          android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            />
 
         <TextView
             android:text="你好"
